WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35878
Quick fix for a chromium unit test fails around
r55675
https://bugs.webkit.org/show_bug.cgi?id=35878
Summary
Quick fix for a chromium unit test fails around r55675
Michael Nordman
Reported
2010-03-08 14:21:49 PST
Quick fix for a chromium unit test fails around
r55675
Restore the tests for empty rects.
Attachments
Simple patch
(1.78 KB, patch)
2010-03-08 14:29 PST
,
Michael Nordman
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Nordman
Comment 1
2010-03-08 14:29:02 PST
Created
attachment 50246
[details]
Simple patch
Darin Fisher (:fishd, Google)
Comment 2
2010-03-08 14:39:06 PST
Landed as
http://trac.webkit.org/changeset/55683
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug