2010-03-08  Michael Nordman  <michaeln@google.com>

Reviewed by Darin Fisher.

        Quick fix for a chromium unit test failures around r55675 (repaint refactoring).
        This change restores the tests for empty rects that were deleted.

        https://bugs.webkit.org/show_bug.cgi?id=35878

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::invalidateContentsAndWindow):
        * src/WebPopupMenuImpl.cpp:
        (WebKit::WebPopupMenuImpl::invalidateContentsAndWindow):



Canonical link: https://commits.webkit.org/46980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55683 268f45cc-cd09-0410-ab3c-d52691b4dbfc